MAINT, DEP: add editorconfig, update pom.xml